<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Labo5</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="buttonSigueme">Sigueme!</string>
    <string name="EditTextMetros">10</string>
    <string name="textViewLatitud">Latitud</string>
    <string name="textViewLongitud">Longitud</string>
    <string name="textViewMetros">Metros para refrescar</string>
    <string name="editTextLatitud">43.297894</string>
    <string name="editTextLongitud">-2.986264</string>

</resources>
