<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/textViewLaitud"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textViewLatitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/textViewLatitud" >
     
    </TextView>
    
    <EditText
        android:id="@+id/editTextLatitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewLatitud"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/editTextLatitud" />
    
    <TextView
        android:id="@+id/textViewLongitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextLatitud"
        android:text="@string/textViewLongitud" />
    
    <EditText
        android:id="@+id/editTextLongitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewLongitud"
        android:layout_below="@+id/textViewLongitud"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/editTextLongitud" >

    </EditText>
    
    <TextView
        android:id="@+id/textViewMetros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextLongitud"
        android:text="@string/textViewMetros" />
    
    <EditText
        android:id="@+id/editTextMetros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewMetros"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/EditTextMetros" />

    <Button
        android:id="@+id/buttonSigueme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextMetros"
        android:layout_below="@+id/editTextMetros"
        android:text="@string/buttonSigueme" />

</RelativeLayout>
